--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <!-- Write code for the left section here -->
                     <div class="profile-details">
                         <div class="profile">
-                            <img src="https://media.licdn.com/dms/image/D5635AQGbsj73tTA6ig/profile-framedphoto-shrink_200_200/0/1668622537779?e=1671987600&v=beta&t=nFjNivYWCy9qnNLXPlzG6FzDkBsbQPqXDspd10X2498" alt="Prathima">
+                            <img src="blob:https://web.whatsapp.com/234b2bd8-2b1e-4dd8-b8ce-8da24bce6990" alt="Pratibha">
                             
                         </div>
                         <h2 class="name">Pratibha yadav</h2>
