--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <!-- Write code for the left section here -->
                     <div class="profile-details">
                         <div class="profile">
-                            <img src="blob:https://web.whatsapp.com/234b2bd8-2b1e-4dd8-b8ce-8da24bce6990" alt="Pratibha">
+                            <img src="https://media.licdn.com/dms/image/D4D35AQF90bDtHHm4zA/profile-framedphoto-shrink_400_400/0/1671902812018?e=1672509600&v=beta&t=eTT6uY0lBiVov22Z5MzDqJhg-o_OCtxlhGGwez7z5Yg" alt="Pratibha">
                             
                         </div>
                         <h2 class="name">Pratibha yadav</h2>
